--- a/style.css
+++ b/style.css
@@ -32,17 +32,17 @@ h1{
     margin: 30px;
     width: 60%;
 }
-html{
-    --border-bottom: var(1px solid #737373);
-}
 .first-group{
-    border-bottom:var(--border-bottom);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    border-bottom:1px solid var(--color-border-bottom);
+    padding-bottom: 30px;
 }
 label{
-    margin-bottom: 10px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #171717;
 }
 :root{
     --color-h2:var(#171717);
@@ -51,6 +51,7 @@ h2{
     color:--color-h2;
     font-size: 18px;
     font-weight: 400;
+    padding-top: 15px;
 
 }
 .notification{
@@ -68,26 +69,55 @@ h2{
     border-radius: 5px;
     font-size: 16px;
     height: 35px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
-.second-group{
+.third-group{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 20px 0;
-    border-bottom: var(--border-bottom);
+    padding: 25px 0 20px;
+    border-bottom:1px solid var(--color-border-bottom);
+}
+html{
+    --color-border-bottom: #d4d4d4;
 }
 .checkbox{
     appearance: none;
     border: 1px solid #e5e5e5;
-    width: 15px;
-    height: 15px;
+    width: 17px;
+    height: 17px;
 }
 .checkbox:checked{
     background-color: #0284c7;
     background-image: url(check.png);
     background-position: center;
     background-size: cover;
+}
+.input-first-group{
+    border: 1px solid #737373;
+    border-radius: 5px;
+    height: 30px;
+    box-shadow: 1px 1px 1px #e5e5e5;
+    margin: 10px;
+}
+.second-group{
+    display: flex;
+    flex-wrap: wrap;
+    
+    justify-content: space-between;
+    padding-bottom: 20px;
+    border-bottom:1px solid var(--color-border-bottom);
 
-
+}
+.input-second-group{
+    border: 1px solid #737373;
+    border-radius: 5px;
+    height: 30px;
+    box-shadow: 1px 1px 1px #e5e5e5;
+    margin: 10px;
+}
+.chec{
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
 }
