--- a/style.css
+++ b/style.css
@@ -38,11 +38,13 @@ h1{
     justify-content: space-between;
     border-bottom:1px solid var(--color-border-bottom);
     padding-bottom: 30px;
+    gap: 20px;
 }
 label{
     font-size: 14px;
     font-weight: 500;
     color: #171717;
+    padding-bottom: 10px;
 }
 :root{
     --color-h2:var(#171717);
@@ -98,7 +100,7 @@ html{
     border-radius: 5px;
     height: 30px;
     box-shadow: 1px 1px 1px #e5e5e5;
-    margin: 10px;
+    width: 100%;
 }
 .second-group{
     display: flex;
@@ -120,4 +122,8 @@ html{
     display: flex;
     align-items: center;
     margin-bottom: 10px;
+}
+.first-group2{
+    display: flex;
+    flex-direction: column;
 }
